	  float samples as well as float samples are still converted to full-range integer ones.
	  LA32FloatWaveGenerator now produces output at 0.25 volume that corresponds to the fact that each partial
	  in LA32 uses only 14-bit samples. Still, no clamping is applied in DACInputMode_NICE mode for floats,
	  so the output samples may overshoot a little for tunes with the volume set too high.

2017-04-09:

	2.1.0 released.

	* Added sample rate conversion feature that allows converting the synthesiser output to any desired sample rate.
	  It can either utilise an external library (e.g. libsoxr or libsamplerate) or use an internal implementation.
	  This behaviour is controlled by a build option libmt32emu_WITH_INTERNAL_RESAMPLER (enabled by default).
	  The internal implementation is derived from that previously added in mt32emu-qt application and aims
	  to provide for good performance yet lower the added latency at the expense of phase linearity.
	* The types of the rendering engine and of the wave generator can now be triggered in runtime. Nuked
	  MT32EMU_USE_FLOAT_SAMPLES preprocessor definition.

2017-03-05:

	2.0.4 released.

	* Fixed API Configuration compatibility check for mode MT32EMU_API_TYPE 3.

2017-02-27:

	2.0.3 released.

	* Renderer now uses pre-allocated temporary sample buffers thus reducing the amount of memory used on the stack.

2017-02-25:

	2.0.2 released.

	* Fixed a bug in handling of the rhythm part that enabled playing uninitialised timbres when using MT-32 control ROMs
	  and setting timbre numbers >= 94 in the rhythm set up area.

2016-12-11:

	2.0.1 released.

	* Disamibugated names of classes ReportHandler and MidiReceiver. In cpp_interface.h, these classes are now named
	  IReportHandler and IMidiReceiver in accordance. This fixes linkage errors that may previously arise
	  when an implementation attempted to extend one of these classes.
	* Various other minor code improvements that render no functional changes.

2016-10-22:
