@@ -157,6 +157,10 @@ void SynthPropertiesDialog::on_assignChannels1_8_10Button_clicked() {
 	synthRoute->resetMIDIChannelsAssignment(true);
 }
 
+void SynthPropertiesDialog::on_niceAmpRampCheckBox_stateChanged(int state) {
+	synthRoute->setNiceAmpRampEnabled(state == Qt::Checked);
+}
+
 void SynthPropertiesDialog::on_engageChannel1CheckBox_stateChanged(int state) {
 	synthRoute->setInitialMIDIChannelsAssignment(state == Qt::Checked);
 }
@@ -214,6 +218,7 @@ void SynthPropertiesDialog::restoreDefaults() {
 	ui->outputGainSlider->setValue(100);
 	ui->reverbOutputGainSlider->setValue(100);
 	ui->reverseStereoCheckBox->setCheckState(Qt::Unchecked);
+	ui->niceAmpRampCheckBox->setCheckState(Qt::Checked);
 	ui->engageChannel1CheckBox->setCheckState(Qt::Unchecked);
 }
 
@@ -238,6 +243,7 @@ void SynthPropertiesDialog::loadSynthProfile(bool reloadFromSynthRoute) {
 	ui->outputGainSlider->setValue(synthProfile.outputGain * 100);
 	ui->reverbOutputGainSlider->setValue(synthProfile.reverbOutputGain * 100);
 	ui->reverseStereoCheckBox->setCheckState(synthProfile.reversedStereoEnabled ? Qt::Checked : Qt::Unchecked);
+	ui->niceAmpRampCheckBox->setCheckState(synthProfile.niceAmpRamp ? Qt::Checked : Qt::Unchecked);
 	ui->engageChannel1CheckBox->setCheckState(synthProfile.engageChannel1OnOpen ? Qt::Checked : Qt::Unchecked);
 }
 
