@@ -7,19 +7,13 @@
     <x>0</x>
     <y>0</y>
     <width>393</width>
-    <height>305</height>
+    <height>444</height>
    </rect>
-  </property>
-  <property name="sizePolicy">
-   <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-    <horstretch>0</horstretch>
-    <verstretch>0</verstretch>
-   </sizepolicy>
   </property>
   <property name="maximumSize">
    <size>
     <width>16777215</width>
-    <height>305</height>
+    <height>444</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -31,9 +25,6 @@
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
     <layout class="QFormLayout" name="formLayout">
-     <property name="fieldGrowthPolicy">
-      <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
-     </property>
      <item row="0" column="0">
       <widget class="QLabel" name="label">
        <property name="text">
@@ -392,6 +383,21 @@ Takes effect after reopening the Synth.</string>
        </item>
       </layout>
      </item>
+     <item row="12" column="0">
+      <widget class="QCheckBox" name="niceAmpRampCheckBox">
+       <property name="toolTip">
+        <string>Toggles improved emulation of amplitude ramp in sustain phase.
+
+Quick changes of volume or expression on a MIDI channel
+may result in amp jumps on real hardware.
+Disabling this option (enabled by default) allows
+to trade-off the quality improvement over the emulation accuracy.</string>
+       </property>
+       <property name="text">
+        <string>Nice Amp Ramp</string>
+       </property>
+      </widget>
+     </item>
      <item row="12" column="1">
       <widget class="QCheckBox" name="engageChannel1CheckBox">
        <property name="text">
@@ -459,8 +465,8 @@ Takes effect after reopening the Synth.</string>
   <tabstop>dacEmuComboBox</tabstop>
   <tabstop>reverbCheckBox</tabstop>
   <tabstop>reverbCompatibilityComboBox</tabstop>
-  <tabstop>reverbTimeSlider</tabstop>
   <tabstop>reverbModeComboBox</tabstop>
+  <tabstop>reverbTimeSlider</tabstop>
   <tabstop>reverbLevelSlider</tabstop>
   <tabstop>analogComboBox</tabstop>
   <tabstop>rendererTypeComboBox</tabstop>
@@ -469,6 +475,7 @@ Takes effect after reopening the Synth.</string>
   <tabstop>reverseStereoCheckBox</tabstop>
   <tabstop>assignChannels2_10Button</tabstop>
   <tabstop>assignChannels1_8_10Button</tabstop>
+  <tabstop>niceAmpRamp</tabstop>
   <tabstop>engageChannel1CheckBox</tabstop>
   <tabstop>profileComboBox</tabstop>
   <tabstop>profileCheckBox</tabstop>
